k8slearn/9.Kubernetes 监控/9.1.Prometheus/Manifest/2.KubernetesPrometheus/prometheus-svc.yaml
# prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: monitor
  labels:
    app: prometheus
spec:
  selector:
    app: prometheus
  type: NodePort
  ports:
    - name: web
      port: 9090
      targetPort: http
      nodePort: 30980
